// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Notification Banner Notification 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-2 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-2:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-2:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-2:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": "1rem",
          "width": 1024,
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-1"
        >
          <button
            className="emotion-2"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-3"
            >
              <span>
                Show Notifications
              </span>
            </span>
          </button>
        </div>
      </div>
      <p
        style={
          Object {
            "paddingTop": "8px",
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Inline Notification 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  overflow: hidden;
  width: 100%;
  min-height: 2.875rem;
  border-radius: 0.25rem;
  color: #0f0f17;
  font-size: 0.875rem;
  border: 0.0625rem solid #d6f2dc;
  background: #f4faf5;
}

.emotion-2[notification-type='banner'] {
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 1rem;
}

.emotion-4 {
  padding-right: 0.5rem;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #36C152;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-6 path {
  fill: #36C152;
}

.emotion-7 {
  padding: 1rem 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
  font-weight: 500;
}

.emotion-16 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-17 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-17:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-17:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-17:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-17:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-19 {
  cursor: pointer;
  margin-left: 1rem;
}

.emotion-21 {
  fill: #5f6c85;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-21 path {
  fill: #5f6c85;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "center",
              "padding": "1rem",
              "width": 768,
            }
          }
        >
          <div
            className="emotion-2"
            data-testid="inline"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </div>
              <div
                className="emotion-7"
                data-testid="inline-message"
              >
                Informative Message
              </div>
            </div>
            <div
              className="emotion-8"
            />
          </div>
          <p
            style={
              Object {
                "paddingTop": "8px",
              }
            }
          >
            
          </p>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "center",
              "padding": "1rem",
              "width": 768,
            }
          }
        >
          <div
            className="emotion-2"
            data-testid="inline"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </div>
              <div
                className="emotion-7"
                data-testid="inline-message"
              >
                Informative Message
              </div>
            </div>
            <div
              className="emotion-8"
            >
              <div
                className="emotion-16"
              >
                <button
                  className="emotion-17"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-18"
                  >
                    <span>
                      Action
                    </span>
                  </span>
                </button>
              </div>
              <span
                className="emotion-19"
                data-testid="notification-close"
                onClick={[Function]}
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-21"
                  />
                </span>
              </span>
            </div>
          </div>
          <p
            style={
              Object {
                "paddingTop": "8px",
              }
            }
          >
            
          </p>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "center",
              "padding": "1rem",
              "width": 768,
            }
          }
        >
          <div
            className="emotion-2"
            data-testid="inline"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </div>
              <div
                className="emotion-7"
                data-testid="inline-message"
              >
                Informative Message
              </div>
            </div>
            <div
              className="emotion-8"
            >
              <div
                className="emotion-16"
              >
                <button
                  className="emotion-17"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-18"
                  >
                    <span>
                      Action
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <p
            style={
              Object {
                "paddingTop": "8px",
              }
            }
          >
            
          </p>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "center",
              "padding": "1rem",
              "width": 768,
            }
          }
        >
          <div
            className="emotion-2"
            data-testid="inline"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </div>
              <div
                className="emotion-7"
                data-testid="inline-message"
              >
                Informative Message
              </div>
            </div>
            <div
              className="emotion-8"
            >
              <span
                className="emotion-19"
                data-testid="notification-close"
                onClick={[Function]}
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-21"
                  />
                </span>
              </span>
            </div>
          </div>
          <p
            style={
              Object {
                "paddingTop": "8px",
              }
            }
          >
            
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Playground 1 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-2 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-2:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-2:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-2:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": "1rem",
          "width": 768,
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-1"
        >
          <button
            className="emotion-2"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-3"
            >
              <span>
                Show Notifications
              </span>
            </span>
          </button>
        </div>
      </div>
      <p
        style={
          Object {
            "paddingTop": "8px",
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Playground 2 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-2 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-2:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-2:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-2:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": "1rem",
          "width": 768,
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-1"
        >
          <button
            className="emotion-2"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-3"
            >
              <span>
                Show Notifications
              </span>
            </span>
          </button>
        </div>
      </div>
      <p
        style={
          Object {
            "paddingTop": "8px",
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Playground 3 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-2 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-2:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-2:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-2:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": "1rem",
          "width": 768,
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-1"
        >
          <button
            className="emotion-2"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-3"
            >
              <span>
                Show Notifications
              </span>
            </span>
          </button>
        </div>
      </div>
      <p
        style={
          Object {
            "paddingTop": "8px",
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Snackbar Notification 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-2 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-2:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-2:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-2:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": "1rem",
          "width": 768,
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-1"
        >
          <button
            className="emotion-2"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-3"
            >
              <span>
                Show Notifications
              </span>
            </span>
          </button>
        </div>
      </div>
      <p
        style={
          Object {
            "paddingTop": "8px",
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Toast Notification 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-2 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-2:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-2:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-2:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": "1rem",
          "width": 768,
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          className="emotion-1"
        >
          <button
            className="emotion-2"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-3"
            >
              <span>
                Show Notifications
              </span>
            </span>
          </button>
        </div>
      </div>
      <p
        style={
          Object {
            "paddingTop": "8px",
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;
